--- a/src/main/resources/static/css/nav.css
+++ b/src/main/resources/static/css/nav.css
@@ -13,7 +13,7 @@
     font-size: 20px;
     color: white;
     border-radius: 0 5px 5px 0;
-   
+    z-index: 1;
 }
 
 #mySidenav a:hover {
@@ -37,9 +37,9 @@
 
 #navIcon_contact {
     top: 300px;
-    background-color: #555
+    background-color: #555;
 }
 
 .navicon {
-	float: right;
+    float: right;
 }
